# f1stats_nextjs

./: .gitignore  README.md  biome.jsonc  components.json  next.config.mjs  openapi-ts.config.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json
api/: _index.py  index.py  main.py  requirements.txt
api/.next/: trace
api/_repository/: engine.py  repository.py
api/core/: engine.py
api/laps/: resolver.py
api/repository/: engine.py  repository.py
api/subscriptions/: [id].py
app/: error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx  swActions.ts  validation.ts
app/components/: SessionSearch.tsx  ThemeSelector.tsx
app/season/: error.tsx
modules/SeasonCalendar/: SeasonCalendarScreen.tsx
modules/TeamSeasonResults/: TeamSeasonResultsScreen.tsx  fetcher.tsx
modules/lap-telemetry/: LapTelemetryScreen.tsx  helpers.ts
modules/season-calendar/: SeasonCalendarScreen.tsx
modules/season-standings/: SeasonStandingsScreen.tsx
modules/session-laps/: LapsScreen.tsx  SessionLapsScreen.tsx
modules/session-laptime-box-chart/: SessionBoxChartScreen.tsx
modules/session-laptime-line-chart/: SessionLaptimeLineChartScreen.tsx
modules/session-laptime-violin-chart/: SessionLaptimeViolinChartScreen.tsx
modules/session-results/: SessionResultsScreen.tsx  fetcher.tsx
modules/team-season-results/: TeamSeasonResultsScreen.tsx  fetcher.tsx
prisma/: prisma.schema  schema.prisma
public/: sw.js
shared/client/: index.ts
shared/workers/: sw.ts  (+1 more)
src/: sw.ts
(+334 files in other folders)
