[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "geojson-pydantic>=2.0.0",
    "geopy>=2.4.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
]
